# Astro

./: CMakeLists.txt
include/core/: Object.hpp  global.hpp
include/math/: Vector2.hpp
src/: main.cpp
tests/: test.cpp
